# ghcide

./: cabal.project  ghcide.cabal  stack-ghc-lib.yaml  stack.yaml  stack810.yaml  stack84.yaml  stack86.yaml  stack88.yaml  test-leak
.github/workflows/: build.yaml
bench/: Main.hs
bench/lib/: Experiments.hs
exe/: Arguments.hs  Main.hs  Utils.hs
session-loader/Development/IDE/: Session.hs
src-ghc810/Development/IDE/GHC/: HieBin.hs
src-ghc86/Development/IDE/GHC/: HieAst.hs  HieTypes.hs
src-ghc88/Development/IDE/GHC/: HieBin.hs
src/Development/IDE/: Plugin.hs
src/Development/IDE/Core/: Compile.hs  FileExists.hs  FileStore.hs  OfInterest.hs  PositionMapping.hs  RuleTypes.hs  Rules.hs  Service.hs  Shake.hs
src/Development/IDE/GHC/: Compat.hs  Error.hs  Orphans.hs  Util.hs
src/Development/IDE/Import/: DependencyInformation.hs  FindImports.hs
src/Development/IDE/LSP/: HoverDefinition.hs  LanguageServer.hs  Notifications.hs  Outline.hs
src/Development/IDE/Plugin/: CodeAction.hs  Completions.hs
src/Development/IDE/Plugin/Completions/: Logic.hs  Types.hs
src/Development/IDE/Spans/: AtPoint.hs  Common.hs  Documentation.hs  Type.hs
src/Development/IDE/Types/: Options.hs
test/data/THNewName/: A.hs  B.hs  C.hs  hie.yaml
test/data/recomp/: recomp.cabal
test/exe/: Main.hs
