cabal-version:       >=1.10
name:                recomp
version:             0.1.0.0
author:              Zubin Duggal
maintainer:          zubin@cmi.ac.in
build-type:          Simple

library
  exposed-modules:     A, B, P
  ghc-options:         -Wmissing-signatures
  hs-source-dirs:      lib
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010

